--- a/index.org
+++ b/index.org
@@ -19,18 +19,16 @@ regardless of whether or not it made money for anybody?
 - *Email:* [[mailto:gmayer@little-lisper.org][gmayer@little-lisper.org]]. All email, from all other accounts,
   gets forwarded to this account.
 - *Office:* Building 37 (Alon, {{{rtl(אלון)}}}) room 106, mailbox 44
-- *Office hours* (for the *Spring Semester, 2021*, currently *only* on [[https://zoom.us/][/Zoom/]], due to covid-19...)
-  - For my /functional programming course/: Mondays, 14-16
-  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})]]: Mondays, 19-21
+- *Office hours* (for the *Summer Semester, 2023*, currently *only* on [[https://zoom.us/][/Zoom/]] only:
+  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})]]: Mondays, 17-19
 - *Telephones:* Voice (+972)(0)8-647-7873, FAX (+972)(0)8-647-7650
 - *Professional mailing address:* [[mailto:gmayer@little-lisper.org][Mayer Goldberg]], [[http://www.cs.bgu.ac.il/][Department of Computer
   Science]], [[http://www.bgu.ac.il/][Ben Gurion University]], PO Box 653, Be'er Sheva 84105,
   Israel. 
-- *Personal mailing address:* Mayer & Sharon Goldberg, PO Box 15161, Be'er Sheva, 8412101, Israel
 
 * Research
 ** Research Interests
-- The Lambda Calculus
+- The Lambda Calculus & Combinatory Logic
 - Programming Languages
   - Interpretation & Compilation
   - Functional Programming
@@ -39,22 +37,10 @@ regardless of whether or not it made money for anybody?
   - Computational Reflection
   - Threaded Computation
 - Automated theorem proving ([[./coq.html][Coq]], [[http://www.nuprl.org/][NuPRL]], etc)
-** Research Students
-*** Present research students
-- Lior Zur-Lotan (MSc, 2021)
-*** Past research students
-- Valery Frolov (MSc, 2012)
-- Guy Wiener (PhD, 2012)
-- Sonia Margulis (MSc, 2011)
-- Avi Shefi (MSc, 2009)
-- Yelena Lev (MSc, 2008)
-- Yigal Greenshpun (MSc, 2007)
-- Guy Wiener (MSc, 2007)
-- Assaf Shemesh (MSc, 2006)
-    
+
 * Teaching
-- /Introduction to Functional Programming/, Spring 2021
-- /Introduction to Compiler Construction/, Fall 2020
+- /Introduction to Compiler Construction/, Fall 2023
+- /Introduction to the Lambda Calculus & Combinatory Logic/, Spring 2024
 - [[./tutorials.html][My tutorials]]
 - [[./special.html][My policies on extensions, exemptions & special requests]]
 - [[./projects.html][Undergraduate projects I am offering ({{{rtl(פרוייקטים לתואר ראשון)}}})]]
@@ -78,8 +64,3 @@ regardless of whether or not it made money for anybody?
 
 So please give the website a second look... \smiley
 
-* /This website is seriously out-of-date...!/
-
-My apologies!
-
-As of around 2014 and until very recently, I was having difficulties updating and managing the website. A combination of technical difficulties, changing platforms, and lack of time to deal with these problems, all prevented me from keeping my website up-to-date. Anyway, I think I managed to solve many of the old problems, and get my website up and running again. I'm updating it continuously. So please stay tuned! \smiley
