--- a/languages.org
+++ b/languages.org
@@ -17,10 +17,10 @@
 - Yiddish
 - Vietnamese
 
-* Languages I've learnt in the past
-- Russian
-- Mandarin Chinese
-- Latin
+* Languages I've learnt in the past 
+- Russian: I've taken two years of Russian as an undergraduate. By the end of my second year, I could speak, read, and write reasonably well for a beginner. The problem is that this was in the US, back in 1987, and it was not easy to find people with whom to converse in Russian... I forgot much of my Russian, though I can still manage simple conversations. I do plan on returning to Russian some day.
+- Mandarin Chinese: One summer I studied some Mandarin Chinese in the hope of sitting in on the course at Ben-Gurion university. I practiced the better part of a summer break, and by the end of the break, I was able to engage in simple, short conversations with Chinese speakers [I found on the internet]. But when the Fall semester was about to start, the students declared a strike, and classes were postponed for several weeks. By the time the strike was over I'd had enough on my plate and coulnd't find the time to study. 
+- Latin: I took one semester of Latin, and have kept on studying on my own. I don't study it presently, but I do read a bit Latin every now and then. 
 - Greek
 - German
 - Hindi
