--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -18,6 +18,6 @@ Learned to type the short vowels ({{{rtl(حَرَكات)}}}) on the standard Ara
 
 I've created my own customized Arabic keyboard input-method for GNU Emacs. I love my input-method because it is based on the standard QWERTY-layout, is very logical, and I can use it to type all sorts of weird stuff, including photetic extensions to Arabic ({{{rtl(پ، ڤ، گ)}}}) that are unavailable on standard Arabic keyboards, but that are necessary for loanwords and dialects. However, my input-method is only available from within GNU Emacs, so in effect, I am typing on *two* Arabic keyboards: The relatively standard one that comes with my linux computers and Android cellular phones, and the input-method I created for Emacs. If I'm ever going to type really quickly in Arabic, I'm going to have to abandon my beloved layout and focus on the standard layout, possibly with some special extensions for Emacs...
 
-I've come to realize that I'm mispronouncing words, confusing the {{{rtl(ح، خ)}}}, {{{rtl(ت، ط)}}}, which are conflated in Hebrew, and {{{rtl(ذ، ظ)}}}, which are not present in Hebrew, as well as dropping long vowels. This is as dangerous a prospect in Arabic as are dropping tone marks in Chinese or Vietnamese. There's a big difference between {{{rtl(حارة)}}} (/neighbourhood/), {{{rtl(خرا)}}} (/shit/), although in some neighbourhoods people are less inclined to pick up after their dogs... And then there is {{{rtl(حارّة)}}} (which is the feminine adjective /spicy hot/). To remedy this problem, I'm writing out the cards for each lesson. This takes longer, and means I'm not studying as many cards, but on the other hand, studying seems to be more effective.
+I've come to realize that I'm mispronouncing words, confusing the {{{rtl(ح، خ)}}}, and {{{rtl(ت، ط)}}}, which are conflated in Hebrew, and {{{rtl(ذ، ظ)}}}, which are not present in Hebrew, as well as dropping long vowels. This is as dangerous a prospect in Arabic as are dropping tone marks in Chinese or Vietnamese. There's a big difference between {{{rtl(حارة)}}} (/neighbourhood/), {{{rtl(خرا)}}} (/shit/), although in some neighbourhoods people are less inclined to pick up after their dogs... And then there is {{{rtl(حارّة)}}} (which is the feminine adjective /spicy hot/). To remedy this problem, I'm writing out the cards for each lesson. This takes longer, and means I'm not studying as many cards, but on the other hand, studying seems to be more effective.
 
 * Modern Standard Arabic (/in planning/)
