--- a/hebrew-support/hebrew-template.org
+++ b/hebrew-support/hebrew-template.org
@@ -4,9 +4,9 @@
 #+keywords: Mayer Goldberg, מאיר גולדברג
 #+html_head: <link rel="stylesheet" type="text/css" href="http://www.little-lisper.org/website/hebrew-support/gmayer-org-mode-web.css" />
 
-#+begin_html
-<script src="gmayer-org-mode-web.js"></script>
-#+end_html
+#+begin_export html
+<script src="http://www.little-lisper.org/website/hebrew-support/gmayer-org-mode-web.js"></script>
+#+end_export
 
 * דוגמא
 
