--- a/hebrew-support/hebrew-template.org
+++ b/hebrew-support/hebrew-template.org
@@ -12,3 +12,9 @@
 * דוגמא
 
 וזו דוגמא לטכסט בעברית. האם ניתן להכניס شوي عربيّة؟
+
+#+begin_export html
+<p.arabic>
+بسم الله الرحمن الرحيم
+</p.arabic>
+#+end_export
