--- a/hebrew-support/hebrew-template.org
+++ b/hebrew-support/hebrew-template.org
@@ -12,7 +12,7 @@
 
 * דוגמא
 
-וזו דוגמא לטכסט בעברית. האם ניתן להכניס شوي عربيّة؟
+וזו דוגמא לטכסט בעברית. האם ניתן להכניס @@html:<span="arabic">شوي عربيّة؟</span>@@
 
 #+begin_export html
 <p class="arabic">
