--- a/hebrew-support/hebrew-template.org
+++ b/hebrew-support/hebrew-template.org
@@ -3,6 +3,7 @@
 #+options: creator:nil, toc:1
 #+keywords: Mayer Goldberg, מאיר גולדברג
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew">
+#+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dana+Yad">
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=David+Libre">
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic">
 #+html_head: <link rel="stylesheet" type="text/css" href="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.css" />
@@ -13,7 +14,7 @@
 
 * דוגמא
 
-וזו דוגמא לטכסט בעברית. האם ניתן להכניס @@html:<span class="arabic">شوي عربيّة؟</span>@@
+וזו דוגמא לטכסט בעברית. האם ניתן להכניס @@html:<span class="arabic">شوي عربيّة؟</span>@@ ומה קורה כאן: @@html:<span style="font-family: 'Dana Yad'; font-size: 60">שלום!</span>@@
 
 #+begin_export html
 <p class="arabic">
