--- a/hebrew-support/hebrew-template.org
+++ b/hebrew-support/hebrew-template.org
@@ -5,7 +5,7 @@
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew">
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=David+Libre">
 #+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa">
-#+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic">
+#+html_head: <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri">
 #+html_head: <link rel="stylesheet" type="text/css" href="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.css" />
 
 #+begin_export html
