--- a/languages.org
+++ b/languages.org
@@ -10,7 +10,7 @@
 * Languages I'm currently learning
 - [[./arabic/arabic.html][Arabic]]
 
-* Languages I plan on learning
+* Languages I wish on learning
 - Turkish
 - Coptic
 - Syriac
@@ -22,7 +22,7 @@
 - Mandarin Chinese: One summer I studied some Mandarin Chinese in the hope of sitting in on the course at Ben-Gurion university. I practiced the better part of a summer break, and by the end of the break, I was able to engage in simple, short conversations with Chinese speakers [I found on the internet]. But when the Fall semester was about to start, the students declared a strike, and classes were postponed for several weeks. By the time the strike was over I'd had enough on my plate and coulnd't find the time to study. 
 - Latin: I took one semester of Latin, and have kept on studying on my own. I don't study it presently, but I do read a bit Latin every now and then. 
 - Greek
-- German
+- German: I took one semester of German. 
 - Hindi
 - Sanskrit
 - Tibetan
