--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -17,8 +17,22 @@
 
 * משאבים
 ** ספרים
+- הספרים של יוחנן אליחי
+  - מה אני פחות אוהב בספרים של אליחי
+    - אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג הסנדהי, בסנסקריט), וזהיש כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה
+    - התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את השדّה מעל לאותיות, ישים את הנקודותים של התא־מרבוטה̈ גם מעל האות *ה* וגם מעל לאות *ת* — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…
+    - מלכתחילה מאד התלהבתי מהטיעונים של אליחי בעד התעתיק שלו ונגד השימוש באותיות ערביות לרישום ערבית מדוברת. כיום אני מתרשם מהם הרבה פחות. החברים הערבים שלי לא מתקשים להשתמש באותיות הערביות ובתנועות הסטנדרטיות על מנת לכתוב בערבית מדוברת. ההתעסקות באלף־בית הערבי מועיל, ומאפשר לי לבנות כתב יד, להתרגל לקריאה ולכתיבה מהירים, להתרגל להקלדה, ויוצרים בסיס טוב ללימוד ערבית ספרותית בהמשך. אני בהחלט מעדיף כיום את השימוש באותיות ערביות עם ההרחבות הידועות הלקוחות מפרסית, על מנת לתמוך במלים מלועזית, בלהג העיראקי, וכו'. 
+  - מה אני אוהב בספרים של אליחי
+    - הספרים מפורטים מאד. אליחי היה לקסיקוגרף לפני ולפנים, וכלל אינפורמציה דקדוקית, אינפורמציה על להגים מקומיים, המוני דוגמאות לשימושים של מלים ולתופעות דקדוקיות, וכמובן לוח פעלים לערבית מדוברת. המלונים של אליחי ממש לא דומים לרוב המלונים שאפשר לקנות בארץ, שהם רשימות מלים הכתובות בשתי עמודות: אחת בעברית, והשניה בשפה אחרת, ללא כל אינפורמציה דקדוקית או אחרת.
+  - רשימת הספרים
+    - [[https://minerva-books.com/cart/][המלון העברי־ערבי]]: ספר נפלא. הכריכה רכה, הדפוס קצת מיושן ופחות קריא, ואוצר המלים גם הספיק להתיישן טיפה. עדיין אי אפשר ללא הספר הזה!
+    - [[https://minerva-books.com/product/arabic-hebrew-complete-dictionary/][המלון הערבי־עברי]]: ספר נפלא. כריכה קשה, הדפוס מודרני, הרבה יותר קריא וברור. מלון שימושי מאד.
+    - החוברות [[https://minerva-books.com/product/%d7%9c%d7%93%d7%91%d7%a8-%d7%a2%d7%a8%d7%91%d7%99%d7%aa-%d7%a7%d7%95%d7%a8%d7%a1-%d7%9c%d7%9c%d7%99%d7%9e%d7%95%d7%93-%d7%a2%d7%a6%d7%9e%d7%99/][לדבר ערבית]]: החוברות קריאות מאד. אבל אני מעדיף ספרי לימוד קצת יותר פורמאליים, כלומר לא רק עם דיאלוגים ורשימות מלים, אלא עם קצת יותר הסברים דקדוקיים.
+- המלון האטימולוגי לערבית מדוברת ולעברית מאת *אברהם שטאל* (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, ובכל זאת, יש לו אוצר מלים עדכני וגדול מאד.
+
 ** מלונים מקוונים
-- [[https://milon.madrasafree.com/][המלון המקוון של *מדרסה* לערבית מדוברת]]. המלון פותח, מומש, ותוחזק על ידי [[https://rothfarb.info/][*רונן רוטפרב*]]. ברבות השנים, רונן העביר את הפרוייקט [[https://madrasafree.com/][לבית הספר *מדרסה* לערבית]], ואלו מתחזקים אותו כעת.
+- [[https://milon.madrasafree.com/][המלון המקוון של *מדרסה* לערבית מדוברת]]. המלון פותח, מומש, ותוחזק על ידי [[https://rothfarb.info/][*רונן רוטפרב*]]. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט [[https://madrasafree.com/][לבית הספר *מדרסה* לערבית]], ואלו מתחזקים אותו כעת.
+- [[https://www.livingarabic.com/en][פרוייקט /{{{latin(Living Arabic)}}}/, {{{naskh(لُغَتُنَا)}}}]], על־ידי [[https://www.patreon.com/user?u=80648765][*חוסאם אבוזאהר*]]. הפרוייקט הזה כולל ערבית ספרותית, וגם להגים שונים של ערבית מדוברת. הפרוייקט חי, מתפתח, וכל הזמן נוספים לו חומרים חדשים. המלון כולל דוגמאות רבות לשימוש במלים בלהגים השונים. 
 
 ** תרגומים אינטרלינאריים
 * ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), {{{ruqaa(عامية شامية)}}}
@@ -30,12 +44,8 @@
 
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 
-יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־{{{latin(Sholes\, QWERTY)}}} הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, והרחבות של האלף־בית הערבי ({{{naskh(پ، ڤ، گ)}}}), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות /{{{latin(copy-and-paste)}}}/ {{{qparen(١٢٣٤)}}}
+יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־{{{latin(Sholes\, QWERTY)}}} הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, כולל בדברים "אקזוטיים" יותר כמו סימני ההפסקות בקריאה בקוראן, הארכת אותיות תוך שימוש ב־{{{naskh(تَطْويـــــــل)}}}, וכו', והרחבות של האלף־בית הערבי ({{{naskh(پ، ڤ، گ)}}}), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות /{{{latin(copy-and-paste)}}}/ לוואצאפ או לאתרים שונים או ב־{{{latin(shell)}}}. אז כעת אני מקליד בשתי מקלדות ערביות שונות: הסטנדרטית [יחסית] שקיימת בלינוקס ובאנדרואיד, וזו שאני פיתחתי, שהיא נוחה מאד, שיש לה עקומת־למידה קטנה מאד ושקל להקליד בה מהר, אבל שזמינה רק באימקס… ובגלל שאני מקליד בשתי מקלדות, קשה לי לפתח מהירות ולצמצם טעויות… ולכן בצער רב אני מתחיל לרדת מהמקלדת המדהימה שפיתחתי, ומאמץ [בקור?] את המקלדת הסטנדרטית בערבית.
 
 למדתי להקליד את התנועות הקצרות (ניקוד, {{{naskh(حَرَكات)}}}) במקלדת הערבית הסטנדרטית. 
-
-I've created my own customized Arabic keyboard input-method for GNU Emacs. I love my input-method because it is based on the standard QWERTY-layout, is very logical, and I can use it to type all sorts of weird stuff, including photetic extensions to Arabic  that are unavailable on standard Arabic keyboards, but that are necessary for loanwords and dialects. However, my input-method is only available from within GNU Emacs, so in effect, I am typing on *two* Arabic keyboards: The relatively standard one that comes with my linux computers and Android cellular phones, and the input-method I created for Emacs. If I'm ever going to type really quickly in Arabic, I'm going to have to abandon my beloved layout and focus on the standard layout, possibly with some special extensions for Emacs...
-
-I've come to realize that I'm mispronouncing words, confusing the {{{naskh(ح، خ)}}}, and {{{naskh(ت، ط)}}}, which are conflated in Hebrew, and {{{naskh(ذ، ظ)}}}, which are not present in Hebrew, as well as dropping long vowels. This is as dangerous a prospect in Arabic as are dropping tone marks in Chinese or Vietnamese. There's a big difference between {{{naskh(حارة)}}} (/neighbourhood/), {{{naskh(خرا)}}} (/shit/), although in some neighbourhoods people are less inclined to pick up after their dogs... And then there is {{{naskh(حارّة)}}} (which is the feminine adjective /spicy hot/). To remedy this problem, I'm writing out the cards for each lesson. This takes longer, and means I'm not studying as many cards, but on the other hand, studying seems to be more effective.
 
 * {{{hebrew(ערבית ספרותית)}}}, {{{latin(MSA)}}}, {{{ruqaa(فصحة)}}}
