--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -20,7 +20,7 @@
 - הספרים של יוחנן אליחי
   - מה אני פחות אוהב בספרים של אליחי
     - אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג הסנדהי, בסנסקריט), וזהיש כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה
-    - התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את הש{{{shaddeh(ד)}}}ה מעל לאותיות, ישים את הנקודותים של התא־מרבוט{{{ta-marbouta(ה)}}} גם מעל האות *ה* וגם מעל לאות *ת* — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…
+    - התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את הש{{{shaddeh(ד)}}}ה מעל לאותיות, ישים את הנקודותים של התא־מרבוט{{{marboutah(ה)}}} גם מעל האות *ה* וגם מעל לאות *ת* — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…
     - מלכתחילה מאד התלהבתי מהטיעונים של אליחי בעד התעתיק שלו ונגד השימוש באותיות ערביות לרישום ערבית מדוברת. כיום אני מתרשם מהם הרבה פחות. החברים הערבים שלי לא מתקשים להשתמש באותיות הערביות ובתנועות הסטנדרטיות על מנת לכתוב בערבית מדוברת. ההתעסקות באלף־בית הערבי מועיל, ומאפשר לי לבנות כתב יד, להתרגל לקריאה ולכתיבה מהירים, להתרגל להקלדה, ויוצרים בסיס טוב ללימוד ערבית ספרותית בהמשך. אני בהחלט מעדיף כיום את השימוש באותיות ערביות עם ההרחבות הידועות הלקוחות מפרסית, על מנת לתמוך במלים מלועזית, בלהג העיראקי, וכו'. 
   - מה אני אוהב בספרים של אליחי
     - הספרים מפורטים מאד. אליחי היה לקסיקוגרף לפני ולפנים, וכלל אינפורמציה דקדוקית, אינפורמציה על להגים מקומיים, המוני דוגמאות לשימושים של מלים ולתופעות דקדוקיות, וכמובן לוח פעלים לערבית מדוברת. המלונים של אליחי ממש לא דומים לרוב המלונים שאפשר לקנות בארץ, שהם רשימות מלים הכתובות בשתי עמודות: אחת בעברית, והשניה בשפה אחרת, ללא כל אינפורמציה דקדוקית או אחרת.
