--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -35,6 +35,10 @@
 - [[https://www.livingarabic.com/en][פרוייקט /{{{latin(Living Arabic)}}}/, {{{naskh(لُغَتُنَا)}}}]], על־ידי [[https://www.patreon.com/user?u=80648765][*חוסאם אבוזאהר*]]. הפרוייקט הזה כולל ערבית ספרותית, וגם להגים שונים של ערבית מדוברת. הפרוייקט חי, מתפתח, וכל הזמן נוספים לו חומרים חדשים. המלון כולל דוגמאות רבות לשימוש במלים בלהגים השונים. 
 
 ** תרגומים אינטרלינאריים
+* הכתב הערבי
+** הסדר המלוני
+** הקלדה עיוורת
+** כתיבה תמה
 * ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), {{{ruqaa(عامية شامية)}}}
 
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם *סוריה הגדולה*, או שָׁאם ({{{naskh(شام)}}}). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, *סוריה הגדולה* כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של *סוריה הגדולה*, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של *סוריה הגדולה*, אלא להתייחס אליו כלהג נפרד.
@@ -44,7 +48,7 @@
 
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 
-יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־{{{latin(Sholes\, QWERTY)}}} הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, כולל בדברים "אקזוטיים" יותר כמו סימני ההפסקות בקריאה בקוראן, הארכת אותיות תוך שימוש ב־{{{naskh(تَطْويـــــــل)}}}, וכו', והרחבות של האלף־בית הערבי ({{{naskh(پ، ڤ، گ)}}}), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות /{{{latin(copy-and-paste)}}}/ לוואצאפ או לאתרים שונים או ב־{{{latin(shell)}}}. אז כעת אני מקליד בשתי מקלדות ערביות שונות: הסטנדרטית [יחסית] שקיימת בלינוקס ובאנדרואיד, וזו שאני פיתחתי, שהיא נוחה מאד, שיש לה עקומת־למידה קטנה מאד ושקל להקליד בה מהר, אבל שזמינה רק באימקס… ובגלל שאני מקליד בשתי מקלדות, קשה לי לפתח מהירות ולצמצם טעויות… ולכן בצער רב אני מתחיל לרדת מהמקלדת המדהימה שפיתחתי, ומאמץ [בקור?] את המקלדת הסטנדרטית בערבית.
+יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־{{{latin(Sholes\, QWERTY)}}} הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, כולל בדברים "אקזוטיים" יותר כמו סימני ההפסקות בקריאה בקוראן, הארכת אותיות תוך שימוש ב־{{{naskh(تَطْويـــــــل)}}}, וכו', והרחבות של האלף־בית הערבי ({{{naskh(پ، ڤ، گ)}}}), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות *העתק־הדבק* לוואצאפ או לאתרים שונים או ב־{{{latin(shell)}}}. אז כעת אני מקליד בשתי מקלדות ערביות שונות: הסטנדרטית [יחסית] שקיימת בלינוקס ובאנדרואיד, וזו שאני פיתחתי, שהיא נוחה מאד, שיש לה עקומת־למידה קטנה מאד ושקל להקליד בה מהר, אבל שזמינה רק באימקס… ובגלל שאני מקליד בשתי מקלדות, קשה לי לפתח מהירות ולצמצם טעויות… ולכן בצער רב אני מתחיל לרדת מהמקלדת המדהימה שפיתחתי, ומאמץ [בקור?] את המקלדת הסטנדרטית בערבית.
 
 למדתי להקליד את התנועות הקצרות (ניקוד, {{{naskh(حَرَكات)}}}) במקלדת הערבית הסטנדרטית. 
 
