--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -28,7 +28,7 @@
     - [[https://minerva-books.com/cart/][המלון העברי־ערבי]]: ספר נפלא. הכריכה רכה, הדפוס קצת מיושן ופחות קריא, ואוצר המלים גם הספיק להתיישן טיפה. עדיין אי אפשר ללא הספר הזה!
     - [[https://minerva-books.com/product/arabic-hebrew-complete-dictionary/][המלון הערבי־עברי]]: ספר נפלא. כריכה קשה, הדפוס מודרני, הרבה יותר קריא וברור. מלון שימושי מאד.
     - החוברות [[https://minerva-books.com/product/%d7%9c%d7%93%d7%91%d7%a8-%d7%a2%d7%a8%d7%91%d7%99%d7%aa-%d7%a7%d7%95%d7%a8%d7%a1-%d7%9c%d7%9c%d7%99%d7%9e%d7%95%d7%93-%d7%a2%d7%a6%d7%9e%d7%99/][לדבר ערבית]]: החוברות קריאות מאד. אבל אני מעדיף ספרי לימוד קצת יותר פורמאליים, כלומר לא רק עם דיאלוגים ורשימות מלים, אלא עם קצת יותר הסברים דקדוקיים.
-- המלון האטימולוגי לערבית מדוברת ולעברית מאת *אברהם שטאל* (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, ובכל זאת, יש לו אוצר מלים עדכני וגדול מאד.
+- המלון האטימולוגי לערבית מדוברת ולעברית מאת *אברהם שטאל* (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, שנותן הרבה מלים נרדפות, ובכל זאת, יש לו הוא מכסה תחומים שאליחי לא נכנס אליהם, ואוצר המלים עדכני יותר וגדול מאד.
 
 ** מלונים מקוונים
 - [[https://milon.madrasafree.com/][המלון המקוון של *מדרסה* לערבית מדוברת]]. המלון פותח, מומש, ותוחזק על ידי [[https://rothfarb.info/][*רונן רוטפרב*]]. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט [[https://madrasafree.com/][לבית הספר *מדרסה* לערבית]], ואלו מתחזקים אותו כעת.
