--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -19,7 +19,7 @@
 ** ספרים
 - הספרים של יוחנן אליחי
   - מה אני פחות אוהב בספרים של אליחי
-    - אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג הסנדהי, בסנסקריט), וזהיש כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה
+    - אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג [[https://en.wikipedia.org/wiki/Sandhi][הסנדהי]], בסנסקריט), וזוהי כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה
     - התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את הש{{{shaddeh(ד)}}}ה מעל לאותיות, ישים את הנקודותים של התא־מרבוט{{{marboutah(ה)}}} גם מעל האות *ה* וגם מעל לאות *ת* — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…
     - מלכתחילה מאד התלהבתי מהטיעונים של אליחי בעד התעתיק שלו ונגד השימוש באותיות ערביות לרישום ערבית מדוברת. כיום אני מתרשם מהם הרבה פחות. החברים הערבים שלי לא מתקשים להשתמש באותיות הערביות ובתנועות הסטנדרטיות על מנת לכתוב בערבית מדוברת. ההתעסקות באלף־בית הערבי מועיל, ומאפשר לי לבנות כתב יד, להתרגל לקריאה ולכתיבה מהירים, להתרגל להקלדה, ויוצרים בסיס טוב ללימוד ערבית ספרותית בהמשך. אני בהחלט מעדיף כיום את השימוש באותיות ערביות עם ההרחבות הידועות הלקוחות מפרסית, על מנת לתמוך במלים מלועזית, בלהג העיראקי, וכו'. 
   - מה אני אוהב בספרים של אליחי
@@ -44,6 +44,18 @@
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם *סוריה הגדולה*, או שָׁאם ({{{naskh(شام)}}}). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, *סוריה הגדולה* כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של *סוריה הגדולה*, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של *סוריה הגדולה*, אלא להתייחס אליו כלהג נפרד.
 
 ** Timeline
+*** <2023-09-23 Sat>
+
+ממשיך ללמוד כרטיסים. לא הוספתי חדשים, אבל שיניתי את אופן הלימוד שלי: כעת כל פעם ש־"הצד השני" של הכרטיס הוא בערבית, אני רושם את המלה באותיות ערביות ומשווה. זו עבודה רבה יותר אבל יש לה יתרונות חשובים:
+- דוברי עברית למדו באופן מכוון שלא להבחין בהבדלים בין ט ל־ת, בין א ל־ע, בין כּ ל־ק, וכו'. בערבית, ההבדלים האלה אינם הבדלים של מוצא (כמו אשכנזים לעומת מזרחים) או הבדלים של סגנון או הגייה, אלא ההבדלים האלו מבחינים בין מלים שונות לחלוטין. {{{naskh(حارة)}}} (שכונה) אינה {{{naskh(حارّة)}}} (חריפה) או {{{naskh(خرا)}}} (חרא). דובר ילידי של עברית *חייב* ללמד את אוזנו ולשונו להבחין בין הצלילים השונים ולהפיק את הצלילים הנכונים ביחס למה שהוא רוצה לומר.
+- אני מתאמן הרבה יותר בכתיבה בערבית:
+  - זה עוזר לי להשתלם בכתיבה תמה ולשפר את כתב היד שלי
+  - זה עוזר לי לשפר את מהירות הכתיבה
+  - זה נותן לי בסיס טוב יותר לקריאה ולכתיבה של ערבית ספרותית בעתיד
+- במקביל אני הוגה את המלה/ביטוי/משפט בקול רם. זה עוזר לי לזכור את הכתיב הנכון, להבדיל בין אותיות שהגייתן דומה, לא להוסיף ולא לגרוע תנועות ארוכות, לזכור את הש{{{shaddeh(ד)}}}ה בכתיבה ובהגייה, לזכור מתי נון־סופית היא תַּנְוִין ({{{naskh(تَنوِين)}}}), וכו'
+
+סיימתי לכתוב את התמיכה במקלדת ערבית סטנדרטית+ באימקס. המשמעות של סטנדרטית+ היא שהאותיות תואמות למקומן במקלדת הערבית הסטנדרטית, אבל התַּשְׁכִּיל ({{{naskh(تَشْكِيل)}}}) ממשיך לפי השיטה שפיתחתי עבור ניקוד בעברית ובערבית. ככה אני אקליד מהר יותר במקלדת ערבית מקובלת (בטלפון ובמחשבים שונים), אבל הניקוד, שממילא כמעט שלא נזקקים לו, יהיה במקומות הגיוניים יותר. היתרון הוא שהמקלדת שלי יכולה לטפל בכל היוניקוד הערבי, כולל בתווים המיוחדים הנדרשים להקלדה של הקוראן, ושאינם מצויים במקלדת הערבית הסטנדרטית.
+
 *** <2023-09-21 Thu> 
 
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
