--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -54,7 +54,7 @@
   - זה נותן לי בסיס טוב יותר לקריאה ולכתיבה של ערבית ספרותית בעתיד
 - במקביל אני הוגה את המלה/ביטוי/משפט בקול רם. זה עוזר לי לזכור את הכתיב הנכון, להבדיל בין אותיות שהגייתן דומה, לא להוסיף ולא לגרוע תנועות ארוכות, לזכור את הש{{{shaddeh(ד)}}}ה בכתיבה ובהגייה, לזכור מתי נון־סופית היא תַּנְוִין ({{{naskh(تَنوِين)}}}), וכו'
 
-סיימתי לכתוב את התמיכה במקלדת ערבית סטנדרטית+ באימקס. המשמעות של סטנדרטית+ היא שהאותיות תואמות למקומן במקלדת הערבית הסטנדרטית, אבל התַּשְׁכִּיל ({{{naskh(تَشْكِيل)}}}) ממשיך לפי השיטה שפיתחתי עבור ניקוד בעברית ובערבית. ככה אני אקליד מהר יותר במקלדת ערבית מקובלת (בטלפון ובמחשבים שונים), אבל הניקוד, שממילא כמעט שלא נזקקים לו, יהיה במקומות הגיוניים יותר. היתרון הוא שהמקלדת שלי יכולה לטפל בכל היוניקוד הערבי, כולל בתווים המיוחדים הנדרשים להקלדה של הקוראן, ושאינם מצויים במקלדת הערבית הסטנדרטית.
+סיימתי לכתוב את התמיכה במקלדת ערבית סטנדרטית+ באימקס. המשמעות של סטנדרטית+ היא שהאותיות תואמות למקומן במקלדת הערבית הסטנדרטית, אבל התַּשְׁכִּיל ({{{naskh(تَشْكِيل)}}}) ממשיך לפי השיטה שפיתחתי עבור ניקוד בעברית ובערבית. ככה אני אקליד מהר יותר במקלדת ערבית מקובלת (בטלפון ובמחשבים שונים), אבל הניקוד, שממילא כמעט שלא נזקקים לו, יהיה במקומות הגיוניים יותר. היתרון הוא שהמקלדת שלי מנגישה את כל תווי היוניקוד הערבי, כולל התווים המיוחדים הנדרשים להקלדה של הקוראן, ושאינם מצויים במקלדת הערבית הסטנדרטית: {{{qparen(١٧٩)}}} {{{naskh(وَلَا تَحْسَبَنَّ الَّذِيْنَ قُتِلُوْا فِى سَبِيْلِ ﷲِ اَمْوَاتًاؕ بَلْ اَحْيَآءٌ عِنْدَ رَبِّهِمْ يُرْزَقُوْنَۙ)}}}
 
 *** <2023-09-21 Thu> 
 
