--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -44,6 +44,21 @@
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם *סוריה הגדולה*, או שָׁאם ({{{naskh(شام)}}}). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, *סוריה הגדולה* כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של *סוריה הגדולה*, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של *סוריה הגדולה*, אלא להתייחס אליו כלהג נפרד.
 
 ** Timeline
+*** <2023-09-27 Wed>
+
+כדי להבין אמרה לבנונית, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
+- {{{naskh(كتوليك)}}}: יוונים קתולים המקיימים את הריטוּס הביזנטי
+- {{{naskh(اللّاتين)}}}: קתולים המקיימים את הריטוּס הרומי־לטיני
+- {{{naskh(الرّوم)}}}: יוונים אורתודוקסים
+
+כעת ניתן להבין אמרה לבנונית מהמלון של אניס פרחה ({{{naskh(انيس فريحة)}}}):
+
+{{{naskh(إن كانِ الكنافِة بيدخلها توم، الموراني بحبّ الرُّوم.)}}}
+
+«אם [כמו ש…] הכנאפה נכנס לתוכה שום, [ככה] המרונים אוהבים את היוונים־אורתודוקסים.»
+
+אמרה לבנונית שמדגישה לא רק את השנאה שבין פלגים שונים, אלא גם את הבלגן בטרמינולוגיה הדתית שם.
+
 *** <2023-09-25 Mon>
 
 שברתי את הראש מדוע המלה {{{naskh(حامل)}}}, שפירושה "אשה בהריון" היא מלה זכרית ומקבלת שמות תואר בזכר. חיטטתי במלונים עד שקלטתי שזו גם המלה ל־"נשא", במובן של נשא של מחלה… ולכן כותבים {{{naskh(حامل جديد)}}} ולא {{{naskh(حامل جديدة)}}}…
